# mkit-telegrambot

./: .gitignore  alembic.ini  app.py  app_config.toml  projects.todo  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_18_0847-07c251ce9209_make_table_user.py  2025_09_18_0848-4e4161093de7_make_sure_user_is_created.py
src/: main.py  rate_limiter.py  storage.py
src/config/: cfg_scheduler.py  cfg_values.py  settings.py  toml_source.py
src/database/: __init__.py  base_session.py  mssql_session.py  sqlite_session.py  utils.py
src/handlers/: __init__.py  admin_handlers.py  callback_handlers.py  channel_handlers.py  group_handlers.py  private_handlers.py
src/models/: __init__.py  db_user.py  mixins.py
src/schemas/: __init__.py  constants.py  sch_user.py
src/users/: user_crud.py
src/utils/: utl_hasher.py
